--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -336,7 +336,7 @@ input[type="checkbox"] {
     -moz-appearance: none;
     width: 28px;
     height: 28px;
-    background-image: url('/assets/img/ui/check-off.png');
+    background-image: url('{{ site.baseurl }}/assets/img/ui/check-off.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -346,7 +346,7 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked {
-    background-image: url('/assets/img/ui/check-on.png');
+    background-image: url('{{ site.baseurl }}/assets/img/ui/check-on.png');
 }
 
 /* 체크박스 포커스 스타일 제거 */
