--- a/assets/css/default/nav.css
+++ b/assets/css/default/nav.css
@@ -29,7 +29,7 @@
     left: 0;
     width: 240px;
     height: 200px;
-    background-image: url('lufelnet_test/assets/img/nav/nav_bg.webp');
+    background-image: url('https://absolroot.github.io/lufelnet_test/assets/img/nav/nav_bg.webp');
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
