--- a/assets/css/default/nav.css
+++ b/assets/css/default/nav.css
@@ -123,7 +123,7 @@
     right: 16px;
     width: 32px;
     height: 32px;
-    background-image: url('{{ site.baseurl }}/assets/img/nav/select.png');
+    background-image: url('https://absolroot.github.io/lufelnet_test/assets/img/nav/select.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -276,7 +276,7 @@
     right: 16px;
     width: 32px;
     height: 32px;
-    background-image: url('{{ site.baseurl }}/assets/img/nav/select.png');
+    background-image: url('https://absolroot.github.io/lufelnet_test/assets/img/nav/select.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -334,7 +334,7 @@
         height: 32px;
         align-items: center;
         margin-bottom: 4px;
-        background-image: url('{{ site.baseurl }}/assets/img/nav/select.png');
+        background-image: url('https://absolroot.github.io/lufelnet_test/assets/img/nav/select.png');
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
