--- a/assets/css/default/nav.css
+++ b/assets/css/default/nav.css
@@ -29,7 +29,7 @@
     left: 0;
     width: 240px;
     height: 200px;
-    background-image: url('https://lufel.net/assets/img/nav/nav_bg.webp');
+    background-image: url('/assets/img/nav/nav_bg.webp');
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -123,7 +123,7 @@
     right: 16px;
     width: 32px;
     height: 32px;
-    background-image: url('https://lufel.net/assets/img/nav/select.png');
+    background-image: url('/assets/img/nav/select.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -276,7 +276,7 @@
     right: 16px;
     width: 32px;
     height: 32px;
-    background-image: url('https://lufel.net/assets/img/nav/select.png');
+    background-image: url('/assets/img/nav/select.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -334,7 +334,7 @@
         height: 32px;
         align-items: center;
         margin-bottom: 4px;
-        background-image: url('https://lufel.net/assets/img/nav/select.png');
+        background-image: url('/assets/img/nav/select.png');
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
