--- a/assets/css/tactic.css
+++ b/assets/css/tactic.css
@@ -844,7 +844,7 @@ body {
     border-radius: 3px;
     cursor: pointer;
     font-size: 13px;
-    background: url("{{ site.baseurl }}/assets/img/ui/newstab.png") no-repeat center center;
+    background: url("/assets/img/ui/newstab.png") no-repeat center center;
     background-size: cover;
     width: 135px;
     height: auto;
