--- a/assets/css/pay-calc.css
+++ b/assets/css/pay-calc.css
@@ -1,6 +1,4 @@
-.main-wrapper {
-    box-sizing: border-box;
-}
+
 
 .navigation-path {
     margin-bottom: 20px;
@@ -335,6 +333,10 @@ select:-moz-focusring {
 
 /* 모바일 대응 */
 @media (max-width: 768px) {
+    .main-wrapper {
+        box-sizing: border-box;
+    }
+    
     .navigation-path, .header-container, .top-cards {
         padding-left: 0px;
         padding-right: 0px;
@@ -483,6 +485,24 @@ select:-moz-focusring {
     .resource-with-icon {
         display: none;
     }
+
+    .efficiency-pc {
+        display: none;
+    }
+
+    .efficiency-mobile {
+        display: inline;
+        margin-left: 6px;
+    }
+
+    .price-main {
+        display: inline;
+        margin-bottom: 0;
+    }
+
+    .mobile-price {
+        font-size: 14px;
+    }
 } 
 
 /* 테이블 내 자원 표시 스타일 */
@@ -502,4 +522,35 @@ select:-moz-focusring {
 /* 선택된 행의 스타일 */
 .package-table tr.selected .resource-with-icon {
     color: #dd8484;
+}
+
+/* 가격 표시 스타일 */
+.price-main {
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.efficiency-pc {
+    display: block;
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.4);
+    font-weight: normal;
+    margin-top: 4px;
+}
+
+.efficiency-mobile {
+    display: none;
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.4);
+    font-weight: normal;
+}
+
+/* 선택된 행의 스타일 */
+.package-table tr.selected .price-main {
+    color: rgba(255, 255, 255, 0.9);
+}
+
+.package-table tr.selected .efficiency-pc,
+.package-table tr.selected .efficiency-mobile {
+    color: rgba(255, 255, 255, 0.6);
 } 
