--- a/assets/css/character.css
+++ b/assets/css/character.css
@@ -73,6 +73,17 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.character-img:not(.loaded) {
+    opacity: 0.7;
+    filter: grayscale(100%);
+}
+
+.character-img.loaded {
+    opacity: 1;
+    filter: grayscale(0%);
 }
 
 .element-icon {
