--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta name="google-adsense-account" content="ca-pub-5862324369257695">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5862324369257695"
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script> -->
   
   <!-- canonical URL -->
   {% assign current_url = page.url | replace:'index.html','' | replace:'.html','' %}
