--- a/assets/css/persona5r.css
+++ b/assets/css/persona5r.css
@@ -20,11 +20,11 @@
 
 
 .card-style {
-    background: #512f2f;
+    background: #4f2626;
 }
 
 .main-nav {
-    background-color: #7d3636;
+    background-color: #573636;
 }
 
 
